Fix shifting on reveal

--- a/components/popover/index.styl
+++ b/components/popover/index.styl
@@ -2,7 +2,7 @@
 
 .popover-parent
   // Avoid adding any declarations here
-  prevent-content-shift()
+  backface-visibility hidden
   &:hover .popover
     visibility visible
     opacity 1
